--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,7 @@ jobs:
         username: ${{ secrets.VM_USER }}
         key: ${{ secrets.VM_SSH_KEY }}
         script: |
+          kill -9 $(lsof -i:5000 -t)
           cd ~/my-flask-app
           pip3 install -r requirements.txt
           nohup python3 app.py &
