--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
         username: ${{ secrets.VM_USER }}
         key: ${{ secrets.VM_SSH_KEY }}
         source: "."
-        target: "~/flask-app"
+        target: "~/my-flask-app"
 
     - name: Restart Flask app on server
       uses: appleboy/ssh-action@v1.0.0
@@ -29,7 +29,7 @@ jobs:
         username: ${{ secrets.VM_USER }}
         key: ${{ secrets.VM_SSH_KEY }}
         script: |
-          cd ~/flask-app
+          cd ~/my-flask-app
           # Stop previous Flask app (if any)
           pkill -f "python3 app.py" || echo "No running Flask app to stop"
           # Update packages
