updated kill command

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
         key: ${{ secrets.VM_SSH_KEY }}
         script: |
           cd ~/flask-app
-          pkill -f "python3 app.py" || echo "No running Flask app to stop"
+          kill -9 $(lsof -i:5000 -t) || echo "No running Flask app to stop"
           pip3 install -r requirements.txt
           nohup python3 app.py > flask.log 2>&1 &
           sleep 5
