--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         username: ${{ secrets.VM_USER }}
         key: ${{ secrets.VM_SSH_KEY }}
         script: |
-          cd ~/flask-app
+          cd ~/my-flask-app
           kill -9 $(lsof -i:5000 -t) || echo "No running Flask app to stop"
           pip3 install -r requirements.txt
           nohup python3 app.py > flask.log 2>&1 &
